# solana_tx_agent

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: README.md  architecture.md  hackathon_submission.md
mev-protos/json_rpc/: README.md
reports/: hackathon_report.json
reports/run-002/: agent_decisions.log.jsonl  hackathon-1782676444321-failure-unfunded-01.base64  hackathon-1782676444321-failure-unfunded-02.base64  hackathon-1782676444321-success-01.base64  hackathon-1782676444321-success-02.base64  hackathon-1782676444321-success-03.base64  hackathon-1782676444321-success-04.base64  hackathon-1782676444321-success-05.base64  hackathon-1782676444321-success-06.base64  hackathon-1782676444321-success-07.base64  hackathon-1782676444321-success-08.base64  lifecycle.log.jsonl
src/: README.md  config.rs  lib.rs  lifecycle.rs  main.rs  policy.rs  stack.rs  tx_factory.rs
src/agent/: README.md  mod.rs
src/ai/: mcp_host.rs  mod.rs  policy.rs
src/ai/agent/: README.md  mod.rs
src/core/: config.rs  lifecycle.rs  mod.rs  stack.rs
src/core/jito/: README.md  client.rs  interceptor.rs  protos.rs  tip.rs
src/core/mcp/: README.md  mod.rs  server.rs
src/core/networking/: README.md  geyser.rs  mod.rs
src/jito/: README.md  client.rs  interceptor.rs  mod.rs  tip.rs
src/mcp/: README.md  host.rs  mod.rs  server.rs
src/networking/: README.md  geyser.rs
