[package]
name = "tx_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-channel = "2.3.1"
base64 = "0.22"
bincode = "1.3.3"
bs58 = "0.5"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.12", features = ["native-tls", "native-tls-alpn", "cookies", "gzip", "json"] }
rmcp = { version = "1.8.0", features = ["client", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
solana-client = "3"
solana-commitment-config = "3"
solana-sdk = "3"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json", "time", "registry"] }
tonic = { version = "0.14.3", features = ["tls-ring"] }
tonic-prost = "0.14.3"
axum = "0.8"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v9.0.0+solana.2.3.6" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v9.0.0+solana.2.3.6" }

[build-dependencies]
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
